force-app/main/default/objects/KimbleOne__RiskCategoryTypeRule__c/KimbleOne__RiskCategoryTypeRule__c.object-meta.xml
<CustomObject>
    <label>Risk Category Type Rule</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Risk Category Type Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Category Type Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>