force-app/main/default/objects/KimbleOne__RiskCategoryTypeRule__c/fields/KimbleOne__RiskCategoryType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RiskCategoryType__c</fullName>
    <label>Risk Category Type</label>
    <referenceTo>KimbleOne__RiskCategoryType__c</referenceTo>
    <relationshipLabel>Risk Category Type Rules</relationshipLabel>
    <relationshipName>RiskCategoryTypeRules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>