force-app/main/default/objects/KimbleOne__RiskCategoryTypeRule__c/fields/KimbleOne__RiskImpact__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RiskImpact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Risk Impact</label>
    <referenceTo>KimbleOne__RiskImpact__c</referenceTo>
    <relationshipLabel>Risk Category Type Rules</relationshipLabel>
    <relationshipName>RiskCategoryTypeRules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>