force-app/main/default/objects/KimbleOne__RiskCategoryTypeRule__c/fields/KimbleOne__RiskProbability__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RiskProbability__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Risk Probability</label>
    <referenceTo>KimbleOne__RiskProbability__c</referenceTo>
    <relationshipLabel>Risk Category Type Rules</relationshipLabel>
    <relationshipName>RiskCategoryTypeRules</relationshipName>
    <type>Lookup</type>
</CustomField>