force-app/main/default/objects/KimbleOne__RiskCategoryTypeRule__c/fields/KimbleOne__RiskSeverity__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RiskSeverity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Risk Severity</label>
    <referenceTo>KimbleOne__RiskSeverity__c</referenceTo>
    <relationshipLabel>Risk Category Type Rules</relationshipLabel>
    <relationshipName>RiskCategoryTypeRules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>