force-app/main/default/objects/KimbleOne__RiskCategoryTypeRule__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__RiskCategoryType__c</columns>
    <columns>KimbleOne__RiskImpact__c</columns>
    <columns>KimbleOne__RiskProbability__c</columns>
    <columns>KimbleOne__RiskSeverity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>